--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "@types/better-sqlite3": "^7.6.5",
+    "@types/node": "^20.8.0",
+    "@types/sanitizer": "^0.0.29",
     "better-sqlite3": "^8.5.0",
     "dotenv": "^16.3.1",
     "sanitizer": "^0.1.3",
@@ -7,12 +10,12 @@
     "telegraf-ignore-old-messages": "^1.0.3"
   },
   "name": "wikipedia-search",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "bot that allows to search articles across the Wikipedia",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
+    "build": "tsc",
+    "start": "node dist/app"
   },
   "keywords": [
     "wikipedia",
